# otel-asgi-issue

./: pyproject.toml  start.sh
otel_asgi_issue/: app.py
