[tool.poetry]
package-mode = false
name = "otel-asgi-issue"
version = "0.1.0"
description = ""
authors = ["emil-vdw <vdwemil@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "~=3.8"
opentelemetry-distro = "0.47b0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
